--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ install:
         $mainModuleFolder = "Modules\$moduleName"
         Import-Module "$env:APPVEYOR_BUILD_FOLDER\DscResource.Tests\AppVeyor.psm1"
         Invoke-AppveyorInstallTask
+        # install dependent modules
+        Install-Module xNetworking,SecurityPolicyDSC,AuditPolicyDSC -Force
 #---------------------------------#
 #      build configuration        #
 #---------------------------------#
